# lipm_control

./: CMakeLists.txt  README.md  package.xml
config/: atlas_control_params.yaml  digit_control_params.yaml  humanoid_control_params.yaml  morphLynX_control_params.yaml  nao_control_mocapnet_params.yaml  nao_control_params.yaml  talos_control_params.yaml
include/lipm_control/: FootPolygon.h  LIPMControl.h  LeakyIntegrator.h  RobotParameters.h  ZMPDistributor.h  control.h  controlMocapNet.h  postureStabilizer.h
launch/: atlas_control.launch  digit_control.launch  humanoid_control.launch  morphLynX_control.launch  nao_control.launch  nao_mocapnet_control.launch  talos_control.launch
src/: FootPolygon.cpp  LeakyIntegrator.cpp  RobotParameters.cpp  ZMPDistributor.cpp  control.cpp  controlMocapNet.cpp  main.cpp  mainMocapNet.cpp  postureStabilizer.cpp
